# Gestor-Base-de-Datos-Gasolinera

./: .gitignore  CMakeLists.txt  README.md  consultas.cpp  consultas.h  consultas.ui  crud.cpp  crud.h  crud.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
